buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }
}

plugins {
    id 'org.javamodularity.moduleplugin' version '1.8.12' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.javamodularity.moduleplugin'

    java {
        modularity.inferModulePath = true
    }

    sourceCompatibility = 21
    targetCompatibility = 21

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'

    repositories {
        mavenCentral()
        mavenLocal()

        flatDir {
            dirs project(':intervalmusiccompositor.build').file('flat_repository')
        }
    }

    dependencies {
        testImplementation 'org.assertj:assertj-core:3.13.2'
        testImplementation 'junit:junit:4.13-beta-1'
        implementation 'org.hamcrest:hamcrest-core:1.3'
        testImplementation 'org.mockito:mockito-core:2.23.4'
    }

    afterEvaluate {
        repositories {
            mavenCentral()
        }

    }
}






